--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "precommit": "npm run lint"
   },
   "dependencies": {
+    "@nuxtjs/auth": "^4.2.0",
+    "@nuxtjs/axios": "^5.3.1",
     "nuxt": "^1.0.0"
   },
   "devDependencies": {
